--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     </fieldset>
   </form>
 
-  <script src="cep.js"></script>
+  <!-- <script src="cep.js"></script> -->
+  <script src="cep-arrow.js"></script>
 </body>
 </html>
